# GP2_from_Scratch_with_RL_finetuning

./: .gitignore  Readme.md  pyproject.toml
data/: train.txt  val.txt
src/: app.py  config.py  generate.py  model.py  ppo_finetune.py  prepare_data.py  reward.py  train.py
wandb/: latest-run
wandb/run-20260602_180744-7gp5tvh6/: run-7gp5tvh6.wandb
wandb/run-20260602_180744-7gp5tvh6/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20260602_181951-izz1l05z/: run-izz1l05z.wandb
wandb/run-20260602_181951-izz1l05z/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20260605_144329-j078ho1i/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20260605_192510-etb6lsus/: run-etb6lsus.wandb
wandb/run-20260605_192510-etb6lsus/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20260607_142810-fo4tnub6/: run-fo4tnub6.wandb
wandb/run-20260607_142810-fo4tnub6/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20260607_143418-vxymwaln/: run-vxymwaln.wandb
wandb/run-20260607_143418-vxymwaln/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
wandb/run-20260607_190025-2xgh82mo/: run-2xgh82mo.wandb
wandb/run-20260607_190025-2xgh82mo/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20260607_190449-l89vhpb6/: run-l89vhpb6.wandb
wandb/run-20260607_190449-l89vhpb6/files/: config.yaml  wandb-metadata.json  wandb-summary.json
